fix input.btn on iOS (v2)

--- a/sass/_buttons.scss
+++ b/sass/_buttons.scss
@@ -28,8 +28,8 @@
 }
 
 input.btn {
-	-webkit-border-radius: 0; 
-	border-radius: 0;
+	-webkit-appearance: none;
+	-webkit-border-radius: 0;
 }
 
 
