--- a/static/css/pos.css
+++ b/static/css/pos.css
@@ -279,8 +279,8 @@ a {
     vertical-align: middle; }
 
 input.btn {
-  -webkit-border-radius: 0;
-  border-radius: 0; }
+  -webkit-appearance: none;
+  -webkit-border-radius: 0; }
 
 .btn-lg {
   font-size: 17px;
